crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__empty_table.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 41
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Tag constr 0 of
--- unoptimized UPLC
(program 1.1.0 (case (constr 0)))
--- optimized Core
let anf#1 : @constr[0]() = constr 0 in
case@Tag anf#1 of
--- optimized UPLC
(program 1.1.0 [(lam anf_2 (case anf_2)) (constr 0)])
--- isolated pass
--- core before
case@Tag constr 0 of
--- uplc before
(program 1.1.0 (case (constr 0)))
--- core after
case@Tag constr 0 of
--- uplc after
(program 1.1.0 (case (constr 0)))
--- result
error: MissingCaseBranch([], Constr(0, []))
--- logs
[]
